<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.formlogin.LoginActivity"
    tools:ignore="ExtraText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/pink_backgroud"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/rosa"
            app:layout_constraintBottom_toTopOf="@id/white_backgroud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        w

        <TextView
            android:id="@+id/txt_LogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/LogIn"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@id/pink_backgroud"
            app:layout_constraintEnd_toEndOf="@id/pink_backgroud"
            app:layout_constraintStart_toStartOf="@id/pink_backgroud"
            app:layout_constraintTop_toTopOf="@id/pink_backgroud"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/txt_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/subtitulo_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_LogIn"
            tools:ignore="VisualLintOverlap" />

        <EditText
            android:id="@+id/edit_username"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@color/inputs"
            android:elevation="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_email_user"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:shadowColor="@color/black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/white_backgroud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pink_backgroud"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="RtlSymmetry,VisualLintBounds,VisualLintTextFieldSize" />

        <ImageButton
            android:id="@+id/profille_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/inputs"
            android:elevation="9dp"
            android:padding="10dp"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintBottom_toBottomOf="@id/edit_username"
            app:layout_constraintEnd_toEndOf="@id/edit_username"
            app:layout_constraintTop_toTopOf="@id/edit_username" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:background="@color/inputs"
            android:elevation="8dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:shadowColor="@color/black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_username"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/togglePassword"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/inputs"
            android:elevation="9dp"
            android:padding="10dp"
            android:src="@drawable/baseline_remove_red_eye_24"
            app:layout_constraintBottom_toBottomOf="@id/edit_password"
            app:layout_constraintEnd_toEndOf="@id/edit_password"
            app:layout_constraintTop_toTopOf="@id/edit_password" />

        <View
            android:id="@+id/white_backgroud"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pink_backgroud" />

        <Button
            android:id="@+id/btn_singup"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/rosa"
            android:shadowColor="@color/black"
            android:text="@string/sing_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_password" />

        <ImageView
            android:id="@+id/img_arrow"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@color/transparent"
            android:paddingRight="30dp"
            android:src="@drawable/baseline_east_24"
            app:layout_constraintBottom_toBottomOf="@id/btn_singup"
            app:layout_constraintEnd_toEndOf="@id/btn_singup"
            app:layout_constraintTop_toTopOf="@id/btn_singup" />

        <TextView
            android:id="@+id/txt_recuperarSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/esqueceu_sua_senha"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_singup" />

        <TextView
            android:id="@+id/txt_recuperarSenhaLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperar_senha"
            android:textColor="@color/rosaLink"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@id/txt_recuperarSenha"
            app:layout_constraintTop_toTopOf="@id/txt_recuperarSenha" />

        <TextView
            android:id="@+id/txt_semCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sem_cadastro"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_recuperarSenha" />

        <TextView
            android:id="@+id/txt_semCadastroLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/txt_cadastrar"
            android:textColor="@color/rosaLink"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/txt_semCadastro"
            app:layout_constraintTop_toTopOf="@id/txt_semCadastro" />

        <TextView
            android:id="@+id/txt_segundaAlternativa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="OU"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_semCadastro" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_signGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_segundaAlternativa" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>