<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/pink_backgroud"
            android:layout_width="wrap_content"
            android:layout_height="540dp"
            android:background="@color/rosa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_return"
            android:layout_width="41dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="@id/pink_backgroud"
            app:layout_constraintTop_toTopOf="@id/pink_backgroud" />

        <TextView
            android:id="@+id/txt_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/pink_backgroud"
            app:layout_constraintEnd_toEndOf="@id/pink_backgroud"
            app:layout_constraintStart_toStartOf="@id/pink_backgroud"
            app:layout_constraintTop_toTopOf="@id/pink_backgroud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/subtitulo_recuperar_senha"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/txt_forgotPassword"
            app:layout_constraintStart_toStartOf="@id/txt_forgotPassword"
            app:layout_constraintTop_toBottomOf="@id/txt_forgotPassword" />

        <View
            android:id="@+id/white_backgroud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pink_backgroud" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:background="@color/inputs"
            android:elevation="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:shadowColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/white_backgroud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pink_backgroud" />

        <Button
            android:id="@+id/btn_email"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/rosa"
            android:shadowColor="@color/black"
            android:text="@string/txt_send_code"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email" />

        <ImageView
            android:id="@+id/icon_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:src="@drawable/baseline_email_24"
            app:layout_constraintBottom_toBottomOf="@id/btn_email"
            app:layout_constraintEnd_toEndOf="@id/btn_email"
            app:layout_constraintTop_toTopOf="@id/btn_email" />

        <TextView
            android:id="@+id/txt_tryLoginAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tentar_fazer_login_novamente"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/btn_email"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@id/btn_email"
            app:layout_constraintTop_toBottomOf="@id/btn_email" />

        <TextView
            android:id="@+id/txt_LogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="Log In"
            android:textColor="@color/rosaLink"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/txt_tryLoginAgain"
            app:layout_constraintStart_toEndOf="@id/txt_tryLoginAgain"
            app:layout_constraintTop_toTopOf="@id/txt_tryLoginAgain" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>